Fixed some issues with if-then-else and unit entry; more expression editor entry tests passing now.